...
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>

    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
...
    <string name="prefUserHint">(read only)</string>
    <string name="prefLogoutEnabled">Enable logout from homepage</string>
    <string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
    <string name="prefDisableNotifications">Disable notifications</string>
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
    <string name="prefAdvanced_title">Advanced</string>
    <string name="prefDisplay_title">Display</string>
    <string name="prefNotifications_description">System notifications and in-app gamification messages</string>
    <string name="prefSecurity_description">Admin protection of special actions and enabling/disabling certain functionalities from the screen</string>
    <string name="prefAdvanced_description">More advanced/technical settings</string>
    <string name="prefDisplay_description">Control how courses and contents are displayed</string>

...
    <string name="prefGamificationPointsViewTypeNone">None</string>
    <string name="prefDurationAnimationTypeGamificationPointsView">Animation duration</string>
    <string name="prefDurationAnimation_summary">Time that the gamification points event animation stays on screen (in seconds)</string>

    <string name="prefSectionReminder">Courses not completed reminder</string>
    <string name="prefCoursesReminderEnabled">Enable reminder notifications</string>
    <string name="prefCoursesReminderIntervalTitle">Reminders interval</string>
    <string name="prefCoursesReminderDaysTitle">Reminder days</string>
    <string name="prefCoursesReminderTimeTitle">Reminder time</string>
    
    <!-- Strings relative to Storage -->
    <string name="prefStorageLocation">Storage Location</string>
    <string name="prefStorageOptionInternal">Internal</string>
    <string name="prefStorageOptionExternal">External</string>
...
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="open">Open</string>
...
    <string name="menu_sync">Synchronise</string>
    <string name="title_sync">Synchronise</string>
    <string name="export_activity.text">Export latest activity and quiz trackers to an external file</string>
    <string name="export_task_completed">Export completed</string>
    <string name="export_task_completed_text">A file named \'%1$s\' has been placed on the device filesystem</string>
    <string name="exported_activities.title">Activity exported trackers</string>
    <string name="export_task_no_activities">There were no new activities or quizzes to export.</string>
    <string name="submit_trackers_success">Trackers successfully submitted to server.</string>

    <!-- Strings for Bluetooth transfer -->
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled</string>
    <string name="paired_devices">Paired devices</string>
    <string name="other_devices">Other devices</string>
...
    <string name="text_size_smallest">Smallest</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_normal">Normal</string>
    <string name="text_size_large">Large</string>
    <string name="text_size_largest">Largest</string>

    <string name="interval_weekly">Weekly</string>
    <string name="interval_daily">Daily</string>

    <string name="week_day_1">Sunday</string>
    <string name="week_day_2">Monday</string>
    <string name="week_day_3">Tuesday</string>
    <string name="week_day_4">Wednesday</string>
    <string name="week_day_5">Thursday</string>
    <string name="week_day_6">Friday</string>
    <string name="week_day_7">Saturday</string>

    <string name="warning_reminder_weekly_just_one_day">For weekly interval only one day must be set</string>
    <string name="warning_reminder_at_least_one_day">You have to set at least one day</string>

    <string name="quiz_protected">Quiz protected</string>
    <string name="please_enter_quiz_password">Please, enter password to access this quiz</string>
    <string name="invalid_password">Invalid password</string>
    <string name="pref_export_full_activity_title">Export full activity data</string>
    <string name="full_activity_exported_success">Full activity exported successfully.\n\nYou can send it to external apps clicking "Share" button</string>
    <string name="full_activity_export_path">\n\nPath: %s.</string>
    <string name="share">Share</string>
    <string name="no_app_to_share">Error. There is no installed app to share this file</string>
    <string name="pref_flush_app_cache">Flush app cache</string>
    <string name="cache_flushed_successfuly">Cache flushed successfuly</string>

...
